--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,39 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext {
+        // Sdk and tools
+        compileSdkVersion = 29
+        minSdkVersion = 24
+        targetSdkVersion = 29
+
+        // App dependencies
+        appcompatVersion = '1.1.0'
+        coreVersion = '1.3.0'
+        constraintlayoutVersion = '1.1.3'
+        glideVersion = '4.11.0'
+        gradleVersion = '4.0.0'
+        gsonVersion = '2.8.6'
+        kotlinVersion = '1.3.72'
+        kotlinCoroutineVersion = '1.3.0'
+        lifecycleVersion = '2.2.0'
+        navVersion = '2.2.1'
+        okhttpVersion = '4.4.0'
+        opencsvVersion = '5.1'
+        roomVersion = '2.2.5'
+        viewpagerVersion = '1.0.0'
+    }
+
     repositories {
         google()
         jcenter()
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
-        classpath 'com.google.gms:google-services:4.2.0'
+        classpath 'com.google.gms:google-services:4.3.3'
+        classpath "com.android.tools.build:gradle:$gradleVersion"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navVersion"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
